add puzzle game

--- a/public/index2.html
+++ b/public/index2.html
@@ -25,9 +25,11 @@
         <div class="droppable" data-draggable-id="fish"><span><i class="fa-solid fa-fish draggable" style="color: black"></i></span></div>
         <div class="droppable" data-draggable-id="dog"><span> <i class="fa-solid fa-dog draggable" style="color: black"></i></span></div>
     </section>
+    <div class="win">
+        <h1>Ты выйграл!</h1>
+    </div>
     <div class="backContainer">
         <a class="back" href="/">Меню</a>
-
     </div>
     <script src="https://kit.fontawesome.com/88d45b3e8b.js" crossorigin="anonymous"></script>
 </body>
