--- a/public/index2.html
+++ b/public/index2.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"> -->
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js" defer></script>
-    <title>Drag and Drop</title>
+    <title>Game</title>
 </head>
 <body>
     <h1>Соедини картинки</h1>
@@ -25,12 +25,13 @@
         <div class="droppable" data-draggable-id="fish"><span><i class="fa-solid fa-fish draggable" style="color: black"></i></span></div>
         <div class="droppable" data-draggable-id="dog"><span> <i class="fa-solid fa-dog draggable" style="color: black"></i></span></div>
     </section>
+    <iframe src="./Puzzle-Game-master/index.html" frameborder="2" width="100%" height="700px"></iframe>
     <div class="win">
-        <h1>Ты выйграл!</h1>
+        <h1>Молодец!</h1>
     </div>
     <div class="backContainer">
         <a class="back" href="/">Меню</a>
     </div>
-    <script src="https://kit.fontawesome.com/88d45b3e8b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/88d45b3e8b.js"crossorigin="anonymous"></script>
 </body>
 </html>
